styles.css
* {
    font-family: "Roboto", sans-serif;
    font-optical-sizing: auto;
    font-variation-settings: "wdth" 100;
}


body    {
    display: flex;
    
    flex-direction: column;
    margin: 0px;
    padding: 0px;   
}

a:link {
    text-decoration: none;
    color: #e5e7eb;
    text-decoration: none;   
}

a:visited {
    color:  white;
}

.header {
    display: flex;
    justify-content: space-between;
    padding: 0px 120px;
    background-color: #1f2937;
}

.logo   {
    height: 55px;
}

.header-links {
    display: flex;
    justify-content: space-evenly;
    align-self: center;
    gap: 20px; 
}

/* header ends here */

.section1 {
    background-color: #1f2937;
    padding: 100px  120px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 5px;
}

.left1  {
    display: flex;
    flex-direction: column;
    max-width: 50%;
}

.main-text  {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
    margin-bottom: 10px;
}

.subtext    {
    font-size: 18px;
    color: #e5e7eb;
    margin-bottom: 10px;
}

.button1 {
    box-sizing: border-box;
    font-size: 18px;
    color: #f9faf8;
    font-weight: 700;
    background-color: #3882f6;
    border: 1px solid #3882f6;
    border-radius: 5px;
    padding: 7px 10px 12px 10px;
    height: 40px;
    width: 150px;
    text-align: center;
    margin: 5px 0px 0px 0px;
}


.img-container {
    box-sizing: border-box;
    display: flex;
    margin-top: 30px;
}

.section1 img {
    align-self: center;
    max-width: 100%;
    max-height: 300px;
    border-radius: 10px;
    padding: auto;
}

/* sectio 1 end  */

.section2   {
    display: flex;
    flex-direction: column;
    padding: 0 120px;
    margin: 60px 0px 160px 0px;
    align-items: center;
}

h1  {
    align-self: center;
    margin: 30px 0px 60px 0px;
    font-weight: 900;
    font-size: 36px;
    color: #1f2937;
}

.bodys2 {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-self: center;
    justify-content: center;
    gap: 40px;
}

.s2-img-bundle  {
    display: flex;
    flex-direction: column;
}

.s2-img-bundle div {
    max-width: 200px;
    text-align: center;
    color: #1f2937;
    margin-top: 10px;
}

.section2 img   {
    max-width: 200px;
    height: 200px;
    border-radius: 10px;
    border: solid #3882f6 5px;
    flex: 0 0 1;
}


/* sectio 2 end */

.section3   {
    background-color: #e5e7eb;
    padding: 0px 120px;
    display: flex;
}

.quote {
    display: flex;
    flex-direction: column;
}

.section3 h1 {
    margin: 200px 0px 0px 0px;
    color: #1f2937;
    font-weight: 300;
}

.section3 h2 {
    margin: 20px 0px 0px 200px;
    align-self: flex-end;
    font-weight: 600;
    margin-bottom: 200px;
}

/* section 3 end */

.section4   {
    padding: 80px   160px;
}

.section4container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 15px;
    padding: 80px;
    border-radius: 10px;
    justify-content: space-between;
    background-color: #3882f6;
}

.section4left   {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.boldtext   {
    font-weight: 700;
    font-size: 30px;
    color: #f9faf8;
}

.light {
    color: #f9faf8;
}

.section4button {
    display: flex;
    align-items: center;
    align-self: center;
    justify-content: center;
    font-weight: 700;
    width: 125px;
    height: 30px;
    flex-grow: 0;
    flex-shrink: 0;
    background-color: #3882f6;
    border: 3px solid #e5e7eb;
    border-radius: 10px;
}

.footer {
    background-color: #1f2937;
    color: #e5e7eb;
    margin-top: auto;
    padding: 40px;
    text-align: center;
}

